<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.techco.Agromuestreo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/Enfermedad"
        android:name="com.techco.Agromuestreo.ui.Enfermedad"
        android:label="ENFERMEDADES"
        tools:layout="@layout/fragment_enfermedad" />


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.techco.Agromuestreo.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.techco.Agromuestreo.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/user_fragment"
        android:name="com.techco.Agromuestreo.User_fragment"
        android:label="USUARIO"
        tools:layout="@layout/fragment_user_fragment" />
    <fragment
        android:id="@+id/noticias"
        android:name="com.techco.Agromuestreo.Noticias"
        android:label="NOTICIAS"
        tools:layout="@layout/fragment_noticias" />
</navigation>